--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "concurrently": "^8.2.2",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
